# PixlieAI

./: .gitattributes  .gitignore  DEVELOP.md  LICENSE  PixlieAI_API_insomnia_v4.yaml  README.md  USE.md  gen_ts_api_types.sh  rest_api.json
.ci/: set-macos-env.sh
.github/workflows/: main_admin.yml  main_pixlie_ai.yml  main_pixlieai.yml  release.yml  release_admin.yml  release_admin.yml.disabled  release_gliner.yml  release_pixlieai.yml
admin/: .env  .env.template  .gitignore  check-version.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
admin/src/: App.tsx  cytoscape-fcose.d.ts  index.css  index.tsx
admin/src/api_types/: APIEdges.ts  APIMatch.ts  APINodeEdges.ts  APINodeFlags.ts  APINodeItem.ts  APIPayload.ts  APIProvider.ts  BulletPoints.ts  CellData.ts  Classification.ts  ClassifiedItem.ts  ClassifierSettings.ts  CommonEdgeLabels.ts  CommonLabels.ts  CommonNodeLabels.ts  Conclusion.ts  CrawlerSettings.ts  DateTimeWrapper.ts  Domain.ts  EdgeLabel.ts  EdgeWrite.ts  EngineApiData.ts  EngineApiQueryType.ts  EngineApiResponse.ts  EngineRequest.ts  EngineRequestPayload.ts  EngineResponsePayload.ts  EngineResponseResults.ts  EntityGroup.ts  EntityName.ts  Explore.ts  ExtractedEntity.ts  Heading.ts  Link.ts  LinkWrite.ts  LossyLocation.ts  Matches.ts  Metadata.ts  Node.ts  NodeItem.ts  (+34 more)
admin/src/layout/: Screen.tsx  Sidebar.tsx
admin/src/routes/: Help.tsx  Home.tsx  PerProject.tsx  RouteList.tsx  Settings.tsx  index.tsx  routeList.ts  routeList.tsx
admin/src/routes/help/: Contact.tsx  HelpContainer.tsx  HelpModal.tsx  HelpPopOver.tsx
admin/src/routes/perProject/: Crawl.tsx  Graph.tsx  Insights.tsx  Workflow.tsx
admin/src/routes/project/: Crawl.tsx  Graph.tsx  Insights.tsx
admin/src/routes/projects/: Crawl.tsx  Create.tsx  CreateProject.tsx  CreateWorkflow.tsx  Data.tsx  Explorer.tsx  Graph.tsx  InfoPopOver.tsx  Insights.tsx  NodeEditor.tsx  PerProject.tsx  ProjectList.tsx  ProjectsPopOver.tsx  Results.tsx  Search.tsx  SearchResults.tsx  Workflow.tsx
admin/src/routes/settings/: SettingsContainer.tsx  SettingsModal.tsx  SettingsPopOver.tsx  Setup.tsx
admin/src/screens/: Crawl.tsx  Graph.tsx  Insights.tsx  Settings.tsx
admin/src/stores/: Engine.tsx  UIClasses.tsx  Workspace.tsx  engine.tsx  explorer.tsx  schema.ts  workspace.tsx
admin/src/utils/: InitialCheckAndLoad.tsx  Loader.tsx  api.test.ts  api.ts  enums.ts  types.d.ts  types.tsx  utils.ts
admin/src/utils/uIClasses/: lightDefault.ts  types.d.ts
admin/src/widgets/: Layout.tsx  Sidebar.tsx
admin/src/widgets/explorer/: Workflow.tsx  WorkflowDataJSON.tsx  WorkflowElementsDataJSON.tsx  WorkflowNode.tsx  WorkflowPath.tsx  WorkflowPaths.tsx
admin/src/widgets/generic/: HighlightTerms.tsx  Label.tsx  ResultsCount.tsx
crawler/: Cargo.toml
crawler/src/: cli.rs
crawler/src/config/: mod.rs
docs/: astro.config.mjs  package.json
gliner/: main.py  requirements.txt  test.py
libdwata_rs/: Cargo.toml
libdwata_rs/src/: error.rs  lib.rs
pixlie_ai/: .gitignore  Cargo.toml
pixlie_ai/fixtures/: rlhf_book_intro.html  test_pixlie_contact.html  test_pixlie_dwata.html
pixlie_ai/src/: error.rs  lib.rs
pixlie_ai/src/api/: mod.rs
pixlie_ai/src/config/: api.rs  gliner.rs  mod.rs  settings.toml.template
pixlie_ai/src/engine/: api.rs  edges.rs  engine.rs  manager.rs  mod.rs  node.rs  nodes.rs
pixlie_ai/src/entity/: content.rs  mod.rs  named_entity.rs  objective.rs  organization.rs  people.rs  project_settings.rs  search.rs  text.rs  topic.rs  workflow.rs
pixlie_ai/src/entity/actions/: mod.rs
pixlie_ai/src/entity/actions/extraction/: mod.rs  topic_link_search_term.rs  topic_link_search_terms.rs
pixlie_ai/src/entity/classifier/: mod.rs
pixlie_ai/src/entity/conclusion/: mod.rs
pixlie_ai/src/entity/crawler/: crawl_condition.rs  mod.rs
pixlie_ai/src/entity/pixlie/: mod.rs
pixlie_ai/src/entity/search/: mod.rs  saved_search.rs  web_search.rs
pixlie_ai/src/entity/web/: domain.rs  fetcher.rs  fixtures.rs  link.rs  metadata.rs  mod.rs  robots_txt.rs  scraper.rs  tests.rs  web_metadata.rs  web_page.rs
pixlie_ai/src/entity/web/test_files/: hn_homepage.html
pixlie_ai/src/projects/: api.rs  mod.rs
pixlie_ai/src/services/: anthropic.rs  gliner.rs  groq.rs  llm.rs  llm_provider.rs  mod.rs  ollama.rs  openai.rs
pixlie_ai/src/utils/: crud.rs  fetcher.rs  llm.rs  llm_schema.rs  mod.rs  notifier.rs  sample.json  version_check.rs
pixlie_ai/src/workspace/: api.rs  mod.rs
pixlieai_rs/: .gitignore  Cargo.toml
pixlieai_rs/fixtures/: test_content_list.html  test_pixlie_about_us.html  test_webpage_with_table.html
pixlieai_rs/src/: error.rs  lib.rs
pixlieai_rs/src/admin/: mod.rs
pixlieai_rs/src/api/: engine.rs  mod.rs
pixlieai_rs/src/api/settings/: mod.rs
pixlieai_rs/src/config/: api.rs  gliner.rs  mod.rs  mqtt.rs  python.rs  settings.toml.template
pixlieai_rs/src/engine/: api.rs  engine.rs  executor.rs  manager.rs  mod.rs  state.rs
pixlieai_rs/src/entity/: content.rs  email.rs  fetchable.rs  mod.rs  organization.rs  people.rs  startup.rs  web.rs  workflow.rs
pixlieai_rs/src/entity/web/: mod.rs  scraper.rs
pixlieai_rs/src/graph/: edge.rs  mod.rs  node.rs
pixlieai_rs/src/llm/: anthropic.rs  mod.rs  ollama.rs
pixlieai_rs/src/projects/: api.rs  mod.rs
pixlieai_rs/src/provider/: anthropic.rs  gliner.rs  mod.rs
pixlieai_rs/src/services/: anthropic.rs  gliner.rs  groq.rs  mod.rs  ollama.rs  openai.rs
pixlieai_rs/src/utils/: crud.rs
pixlieai_rs/src/workers/: mod.rs  web.rs
rest_api/: bruno.json  collection.bru
rest_api/engine/: labels.bru  nodes_by_label.bru
rest_api/project/: all_edges.bru  all_nodes.bru  create_node.bru  nodes_by_label.bru  query.bru
rest_api/projects/: create project.bru  create_project.bru  get projects.bru  get_projects.bru
rest_api/search/: create_term.bru  query.bru
rest_api/settings/: get settings status.bru  get settings.bru  get_settings.bru  get_settings_status.bru  put settings.bru  put_settings.bru
rest_api/workspace/: get_default_workspace.bru  update_default_workspace.bru
(+80 files in other folders)
