[package]
name = "crawl-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", default-features = false, features = ["derive", "std"] }
env_logger = { version = "0.11.5", default-features = false }
log = { version = "0.4.22", default-features = false }
rumqttc = { version = "0.24.0", default-features = false }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false, features = ["std"] }
spider = { version = "2.10.27", default-features = false }

[[bin]]
name = "cli"
path = "src/cli.rs"
