[package]
name = "pixlie_ai"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-cors = { version = "0.7.0", default-features = false }
actix-files = { version = "0.6.6", default-features = false }
actix-web = { version = "4.9.0", default-features = false, features = ["rustls-0_23"] }
bytes = { version = "1.9.0", default-features = false, features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
crossbeam-channel = "0.5.14"
crossbeam-utils = { version = "0.8.21", default-features = false }
csv = "1.3.0"
dirs = { version = "5.0.1", default-features = false }
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color"] }
flate2 = { version = "1.0.35", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
log = "0.4.22"
postcard = { version = "1.0.10", default-features = false, features = [
    "alloc",
] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
reqwest = { version = "0.12.12", default-features = false }
rocksdb = { version = "0.23.0", default-features = false }
rustls = { version = "0.23.23", default-features = false, features = ["aws_lc_rs"] }
rustls-pemfile = { version = "2.2.0", default-features = false }
scraper = { version = "0.20.0", default-features = false }
sentry = "0.36.0"
serde = { version = "1.0.210", features = [
    "derive",
    "rc",
], default-features = false }
serde_json = "1.0.128"
signal-hook = { version = "0.3.17", default-features = false }
spider = { version = "2.10.6", default-features = false, features = [
    "default",
] }
strum = { version = "0.26.3", features = ["derive"] }
tar = { version = "0.4.43", default-features = false }
texting_robots = { version = "0.2.2", default-features = false }
thiserror = { version = "1.0.64", default-features = false }
threadpool = { version = "1.8.1", default-features = false }
tokio = { version = "1.41.0", default-features = false }
toml = { version = "0.8.19", default-features = false }
ts-rs = { version = "10.1.0", default-features = false, features = [
    "chrono",
    "chrono-impl",
    "serde-compat",
] }
url = { version = "2.5.3", default-features = false }
uuid = { version = "1.12.0", default-features = false, features = ["v4"] }
tempfile = "3.17.1"
bitflags = { version = "2.9.0", default-features = false }

[[bin]]
name = "cli"
path = "src/bin/pixlie.rs"
