[package]
name = "pixlieai"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
csv = "1.3.0"
env_logger = { version = "0.11.5", default-features = false }
log = "0.4.22"
postcard = "1.0.10"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rayon = { version = "1.10.0", default-features = false }
reqwest = { version = "0.12.7", features = [
    "blocking",
    "default-tls",
    "json",
], default-features = false }
rocksdb = { version = "0.22.0", default-features = false }
rumqttc = { version = "0.24.0", default-features = false }
scraper = { version = "0.20.0", default-features = false }
serde = { version = "1.0.210", features = [
    "derive",
    "rc",
], default-features = false }
serde_json = "1.0.128"
serde_yaml = { version = "0.9.34", default-features = false }
spider = { version = "2.10.6", default-features = false, features = [
    "default",
] }
strum = { version = "0.26.3", features = ["derive"] }
test-log = { version = "0.2.16", default-features = false, features = ["log"] }
thiserror = { version = "1.0.64", default-features = false }
tokio = { version = "1.41.0", default-features = false }
url = { version = "2.5.3", default-features = false }

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "try_engine"
path = "src/bin/try_engine.rs"
