[package]
name = "pixlieai"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-cors = { version = "0.7.0", default-features = false }
actix-files = { version = "0.6.6", default-features = false }
actix-web = { version = "4.9.0", default-features = false }
actix-ws = { version = "0.3.0", default-features = false }
bytes = { version = "1.9.0", default-features = false, features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
crossbeam-channel = "0.5.14"
crossbeam-utils = { version = "0.8.21", default-features = false }
csv = "1.3.0"
dirs = { version = "5.0.1", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
flate2 = { version = "1.0.35", default-features = false }
log = "0.4.22"
postcard = { version = "1.0.10", default-features = false, features = [
    "alloc",
] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rayon = { version = "1.10.0", default-features = false }
reqwest = { version = "0.12.7", features = [
    "blocking",
    "default-tls",
    "json",
], default-features = false }
rocksdb = { version = "0.22.0", default-features = false }
scraper = { version = "0.20.0", default-features = false }
sentry = "0.36.0"
serde = { version = "1.0.210", features = [
    "derive",
    "rc",
], default-features = false }
serde_json = "1.0.128"
serde_yaml = { version = "0.9.34", default-features = false }
signal-hook = { version = "0.3.17", default-features = false }
spider = { version = "2.10.6", default-features = false, features = [
    "default",
] }
strum = { version = "0.26.3", features = ["derive"] }
tar = { version = "0.4.43", default-features = false }
test-log = { version = "0.2.16", default-features = false, features = ["log"] }
thiserror = { version = "1.0.64", default-features = false }
tokio = { version = "1.41.0", default-features = false }
toml = { version = "0.8.19", default-features = false }
ts-rs = { version = "10.1.0", default-features = false, features = [
    "chrono",
    "chrono-impl",
    "serde-compat",
] }
url = { version = "2.5.3", default-features = false }
uuid = { version = "1.12.0", default-features = false, features = ["v4"] }

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "try_engine"
path = "src/bin/try_engine.rs"
